test/errors/resolution/dotTypeOnType.chpl
type t = int;
var myT : t = 5;

type tType = t.type;
