test/errors/resolution/dotTypeOnType.1.good
dotTypeOnType.chpl:4: error: can't apply '.type' to a type ('int(64)')
